--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,13 @@
-.App {
-  text-align: center;
+.reading-progress {
+  position: fixed;
+  background-color: rgb(0, 238, 255);
+  height: 5px;
+  opacity: 1;
+  z-index: 99999;
+  top: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+article {
+  padding-left: 200px;
+  padding-right: 200px;
 }
